[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
statistical = "1.0.0"

[[bin]]
name = "1"
path = "src/day01.rs"

[[bin]]
name = "2"
path = "src/day02.rs"

[[bin]]
name = "3"
path = "src/day03.rs"

[[bin]]
name = "4"
path = "src/day04.rs"

[[bin]]
name = "5"
path = "src/day05.rs"

[[bin]]
name = "6"
path = "src/day06.rs"

[[bin]]
name = "7"
path = "src/day07.rs"

[[bin]]
name = "8"
path = "src/day08.rs"

[[bin]]
name = "9"
path = "src/day09.rs"

[[bin]]
name = "10"
path = "src/day10.rs"

[[bin]]
name = "11"
path = "src/day11.rs"