[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
statistical = "1.0.0"
hex = "0.3.1"
to-binary = "0.4.0"

[[bin]]
name = "1"
path = "src/day01.rs"

[[bin]]
name = "2"
path = "src/day02.rs"

[[bin]]
name = "3"
path = "src/day03.rs"

[[bin]]
name = "4"
path = "src/day04.rs"

[[bin]]
name = "5"
path = "src/day05.rs"

[[bin]]
name = "6"
path = "src/day06.rs"

[[bin]]
name = "7"
path = "src/day07.rs"

[[bin]]
name = "8"
path = "src/day08.rs"

[[bin]]
name = "9"
path = "src/day09.rs"

[[bin]]
name = "10"
path = "src/day10.rs"

[[bin]]
name = "11"
path = "src/day11.rs"

[[bin]]
name = "12"
path = "src/day12.rs"

[[bin]]
name = "13"
path = "src/day13.rs"

[[bin]]
name = "14"
path = "src/day14.rs"

[[bin]]
name = "15"
path = "src/day15.rs"

[[bin]]
name = "16"
path = "src/day16.rs"

[[bin]]
name = "17"
path = "src/day17.rs"

[[bin]]
name = "18"
path = "src/day18.rs"

[[bin]]
name = "19"
path = "src/day19.rs"